add licence to java files and automatic code cleanup