@@ -1,3 +1,9 @@
+/*
+ * This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at https://mozilla.org/MPL/2.0/.
+ */
+
 package au.org.ala.search.controller;
 
 import au.org.ala.search.service.auth.WebService;
@@ -6,12 +12,16 @@ import org.apache.http.entity.ContentType;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.*;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.CrossOrigin;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
 
-import java.io.*;
 import java.net.URLEncoder;
-import java.util.*;
+import java.nio.charset.StandardCharsets;
+import java.util.Map;
 
 /**
  * Utility, non-versioned, API. Subject to change, removal, etc
@@ -20,11 +30,9 @@ import java.util.*;
 @RestController
 public class UtilController {
     private static final Logger logger = LoggerFactory.getLogger(UtilController.class);
-
+    protected final WebService webService;
     @Value("${austraits.url}")
     public String austraitsUrl;
-
-    protected final WebService webService;
 
     public UtilController(WebService webService) {
         this.webService = webService;
@@ -35,8 +43,8 @@ public class UtilController {
     public ResponseEntity<?> austraitsCount(
             @RequestParam(name = "taxon", required = true) String taxon,
             @RequestParam(name = "APNI_ID", required = false) String id
-    ) throws UnsupportedEncodingException {
-        Map resp = webService.get(austraitsUrl + "/trait-count?taxon=" + URLEncoder.encode(taxon, "UTF-8") + (id != null ? "&APNI_ID=" + id : ""), null, ContentType.APPLICATION_JSON, false, false, null);
+    ) {
+        Map resp = webService.get(austraitsUrl + "/trait-count?taxon=" + URLEncoder.encode(taxon, StandardCharsets.UTF_8) + (id != null ? "&APNI_ID=" + id : ""), null, ContentType.APPLICATION_JSON, false, false, null);
         if (((Integer) resp.get("statusCode")) != 200) {
             return ResponseEntity.status((Integer) resp.get("statusCode")).body(resp.get("resp"));
         }
@@ -48,8 +56,8 @@ public class UtilController {
     public ResponseEntity<?> austraitsSummary(
             @RequestParam(name = "taxon", required = true) String taxon,
             @RequestParam(name = "APNI_ID", required = false) String id
-    ) throws UnsupportedEncodingException {
-        Map resp = webService.get(austraitsUrl + "/trait-summary?taxon=" + URLEncoder.encode(taxon, "UTF-8") + (id != null ? "&APNI_ID=" + id : ""), null, ContentType.APPLICATION_JSON, false, false, null);
+    ) {
+        Map resp = webService.get(austraitsUrl + "/trait-summary?taxon=" + URLEncoder.encode(taxon, StandardCharsets.UTF_8) + (id != null ? "&APNI_ID=" + id : ""), null, ContentType.APPLICATION_JSON, false, false, null);
         if (((Integer) resp.get("statusCode")) != 200) {
             return ResponseEntity.status((Integer) resp.get("statusCode")).body(resp.get("resp"));
         }
@@ -61,8 +69,8 @@ public class UtilController {
     public ResponseEntity<?> austraitsDownload(
             @RequestParam(name = "taxon", required = true) String taxon,
             @RequestParam(name = "APNI_ID", required = false) String id
-    ) throws UnsupportedEncodingException {
-        Map resp = webService.get(austraitsUrl + "/download-taxon-data?taxon=" + URLEncoder.encode(taxon, "UTF-8") + (id != null ? "&APNI_ID=" + id : ""), null, ContentType.TEXT_PLAIN, false, false, null);
+    ) {
+        Map resp = webService.get(austraitsUrl + "/download-taxon-data?taxon=" + URLEncoder.encode(taxon, StandardCharsets.UTF_8) + (id != null ? "&APNI_ID=" + id : ""), null, ContentType.TEXT_PLAIN, false, false, null);
         if (((Integer) resp.get("statusCode")) != 200) {
             return ResponseEntity.status((Integer) resp.get("statusCode")).body(resp.get("resp"));
         }
